; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/fusion/extr_mptsas.c_mptsas_get_starget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/fusion/extr_mptsas.c_mptsas_get_starget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_target = type { i32 }
%struct.mptsas_phyinfo = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.scsi_target* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.scsi_target* (%struct.mptsas_phyinfo*)* @mptsas_get_starget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.scsi_target* @mptsas_get_starget(%struct.mptsas_phyinfo* %0) #0 {
  %2 = alloca %struct.scsi_target*, align 8
  %3 = alloca %struct.mptsas_phyinfo*, align 8
  store %struct.mptsas_phyinfo* %0, %struct.mptsas_phyinfo** %3, align 8
  %4 = load %struct.mptsas_phyinfo*, %struct.mptsas_phyinfo** %3, align 8
  %5 = getelementptr inbounds %struct.mptsas_phyinfo, %struct.mptsas_phyinfo* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.mptsas_phyinfo*, %struct.mptsas_phyinfo** %3, align 8
  %10 = getelementptr inbounds %struct.mptsas_phyinfo, %struct.mptsas_phyinfo* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.scsi_target*, %struct.scsi_target** %12, align 8
  store %struct.scsi_target* %13, %struct.scsi_target** %2, align 8
  br label %15

14:                                               ; preds = %1
  store %struct.scsi_target* null, %struct.scsi_target** %2, align 8
  br label %15

15:                                               ; preds = %14, %8
  %16 = load %struct.scsi_target*, %struct.scsi_target** %2, align 8
  ret %struct.scsi_target* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
